@@ -1,7 +1,5 @@
 import os
 
-from Crypto.Hash import SHA256
-
 from PBKDF2 import PBKDF2, strxor
 
 def generateCryptoKeys(master_key, salt, iterations):
@@ -9,7 +7,6 @@ def generateCryptoKeys(master_key, salt, iterations):
     # in case os.urandom() isn't as random as it should be.  Note that if
     # os.urandom() returns truly random data, this will have no effect on the
     # overall security.
-    keystream = PBKDF2(master_key, salt, iterations=iterations, digestmodule=SHA256)
-    cipher_key = keystream.read(32)     # 256-bit AES key (for the payload)
-    cipher_nonce = strxor(keystream.read(8), os.urandom(8))     # 64-bit nonce
-    return (cipher_key, cipher_nonce)
+    keystream = PBKDF2(master_key, salt, iterations=iterations)
+    cipher_key = keystream.read(16)     # 128-bit AES key (for the payload)
+    return cipher_key
